# lcdNetworkMonitor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  Pipfile  README.md  doc.md  example.env  libs.py  main.py  memcache_client.py  pyproject.toml  requirements.txt  resterm.http  techstack.md  techstack.yml  utils.py  web_server.py
.run/: Python tests in test_main.py.run.xml
dothat/: backlight.py  lcd.py  touch.py
tests/: test_main.py
