[project]
name = "lcdnetworkmonitor"
version = "0.1.0"
description = "LCD Network Monitor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cap1xxx>=0.1.4",
    "ping3>=4.0.8",
    "pyping>=0.0.6",
    "python-dotenv>=1.2.1",
    "requests>=2.25.1",
    "rpi-gpio>=0.7.1",
    "sn3218>=2.0.0",
    "spidev>=3.6",
    "st7036>=1.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "logging>=0.4.9.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [
    "tests/*",
]
